--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,4 @@ ssl_key_path = "pems/key.pem"
 [routes]
 "/" = ["templates/home/home.html", "public/chase/"]
 "/error" = ["templates/error.html"]
+"/static" = ["templates/error.html"]
